Bug 1459146 - Wait for workers to load before rendering the UI. r=nchevobbe
Also fixed some CSS related to the "no workers" empty screen:

- Fixed vertical misalignment.
- Made the "You need to register a service worker" text bigger.
- Refactored some CSS rules and removed unneeded styles.

MozReview-Commit-ID: JVduSXIxcV7

UltraBlame original commit: e88363aa0fddd18844a83c577e73c60416d908e2

--- a/devtools/client/application/application.css
+++ b/devtools/client/application/application.css
@@ -100,24 +100,6 @@ mount
 {
 height
 :
-100
-%
-;
-}
-ul
-{
-list
--
-style
-:
-none
-;
-margin
-:
-0
-;
-padding
-:
-0
+100vh
 ;
 }
