--- a/devtools/client/application/src/components/App.css
+++ b/devtools/client/application/src/components/App.css
@@ -111,27 +111,16 @@ application
 {
 height
 :
-100
-%
+100vh
 ;
 padding
 :
 0
-20px
-;
-overflow
-:
-auto
+2rem
 ;
 display
 :
-flex
-;
-flex
--
-direction
-:
-column
+grid
 ;
 }
 .
@@ -140,17 +129,54 @@ application
 -
 empty
 {
-background
+align
 -
-color
+items
 :
-var
+center
+;
+justify
+-
+content
+:
+center
+;
+font
+-
+size
+:
+1
+.
+3rem
+;
+line
+-
+height
+:
+1
+.
+25
+;
+}
+.
+application
+:
+not
 (
+.
+application
 -
 -
-grey
--
-30
+empty
 )
+{
+grid
+-
+template
+-
+rows
+:
+1fr
+auto
 ;
 }
