--- a/devtools/client/application/src/components/WorkerListEmpty.css
+++ b/devtools/client/application/src/components/WorkerListEmpty.css
@@ -5,49 +5,11 @@ list
 -
 empty
 {
+max
+-
 width
 :
-700px
-;
-line
--
-height
-:
-24px
-;
-left
-:
-50
-%
-;
-top
-:
-50
-%
-;
-margin
--
-top
-:
--
-100px
-;
-margin
--
-left
-:
--
-350px
-;
-position
-:
-absolute
-;
-font
--
-size
-:
-13px
+65rem
 ;
 }
 .
@@ -55,17 +17,42 @@ worker
 -
 list
 -
-empty__list
+empty__tips
 {
+margin
+-
+inline
+-
+start
+:
+2rem
+;
+}
+.
+worker
+-
 list
 -
-style
-:
-unset
-;
-padding
+empty__tips__item
+{
+margin
+-
+block
+-
+start
 :
 0
-40px
+.
+5rem
+;
+margin
+-
+block
+-
+end
+:
+0
+.
+5rem
 ;
 }
